INCLUDE(inc.cmake)

IF(OS_ARCH_SRC)
	ADD_LIBRARY(arch_staic STATIC ${OS_ARCH_SRC})
	SET_TARGET_PROPERTIES(arch_staic PROPERTIES OUTPUT_NAME arch)
	ADD_LIBRARY(arch SHARED ${OS_ARCH_SRC})
	SET_TARGET_PROPERTIES(arch PROPERTIES OUTPUT_NAME arch)
	SET_TARGET_PROPERTIES(arch PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(arch PROPERTIES SOVERSION ${VERSION})
ENDIF()
