INCLUDE(inc.cmake)

include_directories(AFTER
../bsp/hal/x86/include
../arch/x86/include/x86
)

IF(OS_ATOM_SRC)
	ADD_LIBRARY(atom_staic STATIC ${OS_ATOM_SRC})
	SET_TARGET_PROPERTIES(atom_staic PROPERTIES OUTPUT_NAME atom)
	ADD_LIBRARY(atom SHARED ${OS_ATOM_SRC})
	SET_TARGET_PROPERTIES(atom PROPERTIES OUTPUT_NAME atom)
	SET_TARGET_PROPERTIES(atom PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(atom PROPERTIES SOVERSION ${VERSION})
ENDIF()
