INCLUDE(inc.cmake)

include_directories(AFTER
../bsp/boot/include
../bsp/hal/x86/include
)

IF(OS_BSP_SRC)
	ADD_LIBRARY(bsp_staic STATIC ${OS_BSP_SRC})
	SET_TARGET_PROPERTIES(bsp_staic PROPERTIES OUTPUT_NAME bsp)
	ADD_LIBRARY(bsp SHARED ${OS_BSP_SRC})
	SET_TARGET_PROPERTIES(bsp PROPERTIES OUTPUT_NAME bsp)
	SET_TARGET_PROPERTIES(bsp PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(bsp PROPERTIES SOVERSION ${VERSION})
ENDIF()
