add_subdirectory(libcxx)
add_subdirectory(tslib)
add_subdirectory(thttpd)
add_subdirectory(sqlite)
add_subdirectory(php)
add_subdirectory(v8)
add_subdirectory(libvpx)
add_subdirectory(libiconv)
add_subdirectory(cairo)
add_subdirectory(freetype)

add_subdirectory(zlib)
add_subdirectory(bzip)
add_subdirectory(gzip)
add_subdirectory(expat)
add_subdirectory(jpeg)
add_subdirectory(libmng)
add_subdirectory(libogg)
add_subdirectory(libpng)
add_subdirectory(libxml)
add_subdirectory(tiff)
add_subdirectory(netsurf)
add_subdirectory(pixman)
