INCLUDE(inc.cmake)

IF(OS_FS_SRC)
	ADD_LIBRARY(fs_staic STATIC ${OS_FS_SRC})
	SET_TARGET_PROPERTIES(fs_staic PROPERTIES OUTPUT_NAME fs)
	ADD_LIBRARY(fs SHARED ${OS_FS_SRC})
	SET_TARGET_PROPERTIES(fs PROPERTIES OUTPUT_NAME fs)
	SET_TARGET_PROPERTIES(fs PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(fs PROPERTIES SOVERSION ${VERSION})
ENDIF()
