INCLUDE(inc.cmake)

IF(OS_LIB_SRC)
	ADD_LIBRARY(lib_staic STATIC ${OS_LIB_SRC})
	SET_TARGET_PROPERTIES(lib_staic PROPERTIES OUTPUT_NAME std)
	ADD_LIBRARY(lib SHARED ${OS_LIB_SRC})
	SET_TARGET_PROPERTIES(lib PROPERTIES OUTPUT_NAME std)
	SET_TARGET_PROPERTIES(lib PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(lib PROPERTIES SOVERSION ${VERSION})
ENDIF()
