INCLUDE(inc.cmake)

IF(OS_NET_SRC)
	ADD_LIBRARY(net_staic STATIC ${OS_NET_SRC})
	SET_TARGET_PROPERTIES(net_staic PROPERTIES OUTPUT_NAME net)
	ADD_LIBRARY(net SHARED ${OS_NET_SRC})
	SET_TARGET_PROPERTIES(net PROPERTIES OUTPUT_NAME net)
	SET_TARGET_PROPERTIES(net PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(net PROPERTIES SOVERSION ${VERSION})
ENDIF()
