INCLUDE(inc.cmake)

IF(OS_CONTRIB_BZIP_SRC)
	ADD_LIBRARY(bzip_static STATIC ${OS_CONTRIB_BZIP_SRC})
	SET_TARGET_PROPERTIES(bzip_static PROPERTIES OUTPUT_NAME bz)
	ADD_LIBRARY(bzip SHARED ${OS_CONTRIB_BZIP_SRC})
	SET_TARGET_PROPERTIES(bzip PROPERTIES OUTPUT_NAME bz)
	SET_TARGET_PROPERTIES(bzip PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(bzip PROPERTIES SOVERSION ${VERSION})
ENDIF()
