INCLUDE(inc.cmake)

add_definitions(-DHAVE_BCOPY)


IF(OS_CONTRIB_EXPAT_SRC)
	ADD_LIBRARY(expat SHARED ${OS_CONTRIB_EXPAT_SRC})
	SET_TARGET_PROPERTIES(expat PROPERTIES OUTPUT_NAME expat)
	SET_TARGET_PROPERTIES(expat PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(expat PROPERTIES SOVERSION ${VERSION})
	ADD_LIBRARY(expat_static STATIC ${OS_CONTRIB_EXPAT_SRC})
	SET_TARGET_PROPERTIES(expat_static PROPERTIES OUTPUT_NAME expat)
ENDIF()
