INCLUDE(inc.cmake)

include_directories(AFTER
./builds/unix
./include
)


IF(OS_CONTRIB_FREETYPE_SRC)
	ADD_LIBRARY(freetype_static STATIC ${OS_CONTRIB_FREETYPE_SRC})
	SET_TARGET_PROPERTIES(freetype_static PROPERTIES OUTPUT_NAME freetype)
	ADD_LIBRARY(freetype SHARED ${OS_CONTRIB_FREETYPE_SRC})
	SET_TARGET_PROPERTIES(freetype PROPERTIES OUTPUT_NAME freetype)
	SET_TARGET_PROPERTIES(freetype PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(freetype PROPERTIES SOVERSION ${VERSION})
ENDIF()
