INCLUDE(inc.cmake)

IF(OS_CONTRIB_GZIP_SRC)
	ADD_LIBRARY(gzip_static STATIC ${OS_CONTRIB_GZIP_SRC})
	SET_TARGET_PROPERTIES(gzip_static PROPERTIES OUTPUT_NAME gz)
	ADD_LIBRARY(gzip SHARED ${OS_CONTRIB_GZIP_SRC})
	SET_TARGET_PROPERTIES(gzip PROPERTIES OUTPUT_NAME gz)
	SET_TARGET_PROPERTIES(gzip PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(gzip PROPERTIES SOVERSION ${VERSION})
ENDIF()
