cmake_minimum_required(VERSION 2.8)

PROJECT(jpeg)

SET(VERSION "0.1.07")


include_directories(AFTER

)

SET(CURPATH "")
INCLUDE(inc.cmake)

IF(OS_CONTRIB_JPEG_SRC)
	ADD_LIBRARY(jpeg_static STATIC ${OS_CONTRIB_JPEG_SRC})
	SET_TARGET_PROPERTIES(jpeg_static PROPERTIES OUTPUT_NAME jpeg)
	ADD_LIBRARY(jpeg SHARED ${OS_CONTRIB_JPEG_SRC})
	SET_TARGET_PROPERTIES(jpeg PROPERTIES OUTPUT_NAME jpeg)
	SET_TARGET_PROPERTIES(jpeg PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(jpeg PROPERTIES SOVERSION ${VERSION})
ENDIF()
