INCLUDE(inc.cmake)

SET(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} -Wattributes")

include_directories(AFTER
./srclib
./lib
./libcharset/include
./
)


IF(OS_CONTRIB_LIBICONV_SRC)
	ADD_LIBRARY(iconv SHARED ${OS_CONTRIB_LIBICONV_SRC})
	SET_TARGET_PROPERTIES(iconv PROPERTIES OUTPUT_NAME iconv)
	SET_TARGET_PROPERTIES(iconv PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(iconv PROPERTIES SOVERSION ${VERSION})
	ADD_LIBRARY(iconv_static STATIC ${OS_CONTRIB_LIBICONV_SRC})
	SET_TARGET_PROPERTIES(iconv_static PROPERTIES OUTPUT_NAME iconv)
ENDIF()
