INCLUDE(inc.cmake)

include_directories(AFTER
../zlib
../jpeg
./
)


IF(OS_CONTRIB_LIBMNG_SRC)
	ADD_LIBRARY(libmng SHARED ${OS_CONTRIB_LIBMNG_SRC})
	SET_TARGET_PROPERTIES(libmng PROPERTIES OUTPUT_NAME mng)
	SET_TARGET_PROPERTIES(libmng PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(libmng PROPERTIES SOVERSION ${VERSION})
	ADD_LIBRARY(libmng_static STATIC ${OS_CONTRIB_LIBMNG_SRC})
	SET_TARGET_PROPERTIES(libmng_static PROPERTIES OUTPUT_NAME mng)
ENDIF()
