INCLUDE(inc.cmake)

include_directories(AFTER
./include
)


IF(OS_CONTRIB_LIBOGG_SRC)
	ADD_LIBRARY(libogg SHARED ${OS_CONTRIB_LIBOGG_SRC})
	SET_TARGET_PROPERTIES(libogg PROPERTIES OUTPUT_NAME ogg)
	SET_TARGET_PROPERTIES(libogg PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(libogg PROPERTIES SOVERSION ${VERSION})
	ADD_LIBRARY(libogg_static STATIC ${OS_CONTRIB_LIBOGG_SRC})
	SET_TARGET_PROPERTIES(libogg_static PROPERTIES OUTPUT_NAME ogg)
ENDIF()
