INCLUDE(inc.cmake)

include_directories(AFTER
./
../../inc/include
)


IF(OS_CONTRIB_LIBPNG_SRC)
	ADD_LIBRARY(libpng SHARED ${OS_CONTRIB_LIBPNG_SRC})
	SET_TARGET_PROPERTIES(libpng PROPERTIES OUTPUT_NAME png)
	SET_TARGET_PROPERTIES(libpng PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(libpng PROPERTIES SOVERSION ${VERSION})
	ADD_LIBRARY(libpng_static STATIC ${OS_CONTRIB_LIBPNG_SRC})
	SET_TARGET_PROPERTIES(libpng_static PROPERTIES OUTPUT_NAME png)
ENDIF()
