cmake_minimum_required(VERSION 2.8)

PROJECT(libsoup)

SET(VERSION "0.1.07")

#SET(CMAKE_C_FLAGS   "-O2 -Wcpp")

#add_definitions(-DHAVE_BCOPY)

include_directories(AFTER

)

SET(CURPATH "")
INCLUDE(inc.cmake)

IF(OS_CONTRIB_LIBSOUP_SRC)
	ADD_LIBRARY(libsoup SHARED ${OS_CONTRIB_LIBSOUP_SRC})
	SET_TARGET_PROPERTIES(libsoup PROPERTIES OUTPUT_NAME soup)
	SET_TARGET_PROPERTIES(libsoup PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(libsoup PROPERTIES SOVERSION ${VERSION})
	#ADD_LIBRARY(libsoup_static STATIC ${OS_CONTRIB_LIBSOUP_SRC})
	#SET_TARGET_PROPERTIES(libsoup_static PROPERTIES OUTPUT_NAME soup)
ENDIF()
