cmake_minimum_required(VERSION 2.8)

PROJECT(libxt)

SET(VERSION "0.1.07")

SET(CMAKE_C_FLAGS   "-O2 -Wcpp")

include_directories(AFTER
./include/X11
./include

../../inc/include/X11
../../inc/include
)

SET(CURPATH "")
INCLUDE(inc.cmake)

IF(OS_CONTRIB_LIBXT_SRC)
	ADD_LIBRARY(libxt_static STATIC ${OS_CONTRIB_LIBXT_SRC})
	SET_TARGET_PROPERTIES(libxt_static PROPERTIES OUTPUT_NAME xt)
	ADD_LIBRARY(libxt SHARED ${OS_CONTRIB_LIBXT_SRC})
	SET_TARGET_PROPERTIES(libxt PROPERTIES OUTPUT_NAME xt)
	SET_TARGET_PROPERTIES(libxt PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(libxt PROPERTIES SOVERSION ${VERSION})
ENDIF()
