cmake_minimum_required(VERSION 2.8)

PROJECT(libffi)

SET(VERSION "0.1.07")

#SET(CMAKE_C_FLAGS   "-O2 -Wcpp")

include_directories(AFTER

)

SET(CURPATH "")
INCLUDE(inc.cmake)

IF(OS_CONTRIB_LIGHTTPD_SRC)
	ADD_LIBRARY(lighttpd SHARED ${OS_CONTRIB_LIGHTTPD_SRC})
	SET_TARGET_PROPERTIES(lighttpd PROPERTIES OUTPUT_NAME lighttpd)
	SET_TARGET_PROPERTIES(lighttpd PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(lighttpd PROPERTIES SOVERSION ${VERSION})
	ADD_LIBRARY(lighttpd_static STATIC ${OS_CONTRIB_LIGHTTPD_SRC})
	SET_TARGET_PROPERTIES(lighttpd_static PROPERTIES OUTPUT_NAME lighttpd)
ENDIF()
