cmake_minimum_required(VERSION 2.8)

PROJECT(mplayer)

SET(VERSION "0.1.07")

#SET(CMAKE_C_FLAGS   "-O2 -Wcpp")

include_directories(AFTER

)

SET(CURPATH "")
INCLUDE(inc.cmake)

IF(OS_CONTRIB_LIBICONV_SRC)
	ADD_LIBRARY(iconv SHARED ${OS_CONTRIB_LIBICONV_SRC})
	SET_TARGET_PROPERTIES(iconv PROPERTIES OUTPUT_NAME iconv)
	SET_TARGET_PROPERTIES(iconv PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(iconv PROPERTIES SOVERSION ${VERSION})
	#ADD_LIBRARY(iconv_static STATIC ${OS_CONTRIB_LIBICONV_SRC})
	#SET_TARGET_PROPERTIES(iconv_static PROPERTIES OUTPUT_NAME iconv)
ENDIF()
