INCLUDE(inc.cmake)

include_directories(AFTER
../../inc/include
../php/ext/sqlite/libsqlite/src
)


IF(OS_CONTRIB_SQLITE_SRC)
	ADD_LIBRARY(sqlite SHARED ${OS_CONTRIB_SQLITE_SRC})
	SET_TARGET_PROPERTIES(sqlite PROPERTIES OUTPUT_NAME sqlite)
	SET_TARGET_PROPERTIES(sqlite PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(sqlite PROPERTIES SOVERSION ${VERSION})
	ADD_LIBRARY(sqlite_static STATIC ${OS_CONTRIB_SQLITE_SRC})
	SET_TARGET_PROPERTIES(sqlite_static PROPERTIES OUTPUT_NAME sqlite)
ENDIF()
