INCLUDE(inc.cmake)

add_definitions(
-DHAVE__PROGNAME=1 -DHAVE_FCNTL_H=1 -DHAVE_GRP_H=1 -DHAVE_MEMORY_H=1 -DHAVE_PATHS_H=1 -DHAVE_POLL_H=1 -DHAVE_SYS_POLL_H=1 -DTIME_WITH_SYS_TIME=1 -DHAVE_DIRENT_H=1 -DHAVE_LIBCRYPT=1 -DHAVE_STRERROR=1 -DHAVE_WAITPID=1 -DHAVE_VSNPRINTF=1 -DHAVE_DAEMON=1 -DHAVE_SETSID=1 -DHAVE_GETADDRINFO=1 -DHAVE_GETNAMEINFO=1 -DHAVE_GAI_STRERROR=1 -DHAVE_SIGSET=1 -DHAVE_ATOLL=1 -DHAVE_UNISTD_H=1 -DHAVE_GETPAGESIZE=1 -DHAVE_MMAP=1 -DHAVE_SELECT=1 -DHAVE_POLL=1 -DHAVE_TM_GMTOFF=1 -DHAVE_INT64T=1 -DHAVE_SOCKLENT=1
)

include_directories(AFTER
./

../../include
../../include/std
../../include/stl
../../lib
../../fs
../../net
../../arch/avr/include
../../include/sys

../../inc/include
../../inc/local/include
../../
)


IF(OS_CONTRIB_THTTPD_SRC)
	ADD_LIBRARY(thttpd_static STATIC ${OS_CONTRIB_THTTPD_SRC})
	SET_TARGET_PROPERTIES(thttpd_static PROPERTIES OUTPUT_NAME thttpd)
	ADD_LIBRARY(thttpd SHARED ${OS_CONTRIB_THTTPD_SRC})
	SET_TARGET_PROPERTIES(thttpd PROPERTIES OUTPUT_NAME thttpd)
	SET_TARGET_PROPERTIES(thttpd PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(thttpd PROPERTIES SOVERSION ${VERSION})
ENDIF()
